k8s/auth-development.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: authservice
  namespace: microservices


spec:
  replicas: 2
  selector:
    matchLabels:
      app: authservice
  template:
    metedata:
      labels:
        app: authservice
    spec:
      containers:
        - name: authservice
          image: authservice:latest
          ports:
            - containerPort: 7092
