k8s/kafka-config.yaml

apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: kafka
  namespace: microservices

spec:
  serviceName: kafka
  replicas: 1

  selector:
    matchLabels:
      app: kafka

  template:

    metadata:
      labels:
        app: kafka

    spec:

      containers:

      - name: kafka
        image: confluentinc/cp-kafka:7.7.0

        ports:

        - name: broker
          containerPort: 9092

        - name: controller
          containerPort: 9093


        volumeMounts:

        - name: kafka-data
          mountPath: /var/lib/kafka/data



  volumeClaimTemplates:

  - metadata:
      name: kafka-data

    spec:

      accessModes:
      - ReadWriteOnce

      resources:

        requests:
          storage: 2Gi
