k8s/kafka-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: kafka
  namespace: microservices

spec:
  clusterIP: None

  selector:
    app: kafka

  ports:
  - name: broker
    port: 9092
    targetPort: 9092

  - name: controller
    port: 9093
    targetPort: 9093
